# stk-polymarket

./: .gitignore  README.md  TODO  pyproject.toml  requirements.txt
stk_polymarket/: __init__.py
stk_polymarket/api/: markets.py
stk_polymarket/api/modules/: helpers.py
stk_polymarket/connection/: __init__.py  auth.py  connect.py
stk_polymarket/trading/: __init__.py  fast.py  orders.py  send.py
stk_polymarket/wss/: __init__.py  market_channel.py  user_channel.py
striker_polymarket_api/: helpers.py  markets.py  subgraph.py
striker_polymarket_api/api/: markets.py  rest.py  subgraph.py
striker_polymarket_api/api/modules/rest_api/: clv.py  fetch.py  price_history.py
striker_polymarket_api/api/modules/subgraph_api/: fetch_subgraph.py
striker_polymarket_api/rest_api/: fetch.py  price_history.py
striker_polymarket_api/subgraph_api/: fetch_subgraph.py
tests/: conftest.py  test_amounts.py  test_fast_parity.py  test_hmac_headers.py  test_imports.py  test_live_smoke.py
